- more separation of work between jobs and tasks

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,7 +24,7 @@
         
         <h2>Bookmarklet</h2>
         <p> Drag the bookmaklet bellow into your browser link bar</p>
-        <p><a href="javascript:(function(){_s=document.createElement('SCRIPT');_s.type='text/javascript';_s.src='{{bookmarklet_src}}?x='+(Math.random());document.getElementsByTagName('head')[0].appendChild(_s);})();">bookmark</a></p>
+        <p><a href="javascript:(function(){_s=document.createElement('SCRIPT');_s.type='text/javascript';_s.src='{{bookmarklet_src}}?x='+(Math.random());document.getElementsByTagName('head')[0].appendChild(_s);})();">HackerNews Analyzer</a></p>
 
     </div>
 </body>
