- updated css and html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -31,17 +31,20 @@
          with comments and press the bookmarklet</p>
         
         
-        <h3>Screenshot</h3>
+        <h2>Screenshot</h2>
         <p><img src="/static/img/screenshot.png" width="712" height="697"></p>
         
-
+        <h2>Current status</h2>
+        <p>There is currently a 1000 daily call limit for the AlchemyAPI and the current database doesn't hold all the HN comments, only recent analisys is availabe at the moment</p>
         
-        <h3>Powered by</h3>
+        <h2>Powered by</h2>
         <ul>
             <li><a href="http://www.alchemyapi.com">AlchemyPI</a></li>
             <li><a href="http://www.hnsearch.com/api">HNSearch API</a></li>
             <li><a href="http://appengine.google.com">Google AppEngine</a></li>
             <li><a href="http://www.tipfy.org">Tipfy</a></li>
+            <li><a href="https://github.com/zemanel/HNMood">source code</a></li>            
+            
         </ul>
         
     </div>
