- fixed some bugs

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -39,7 +39,7 @@
         
         <h2>Powered by</h2>
         <ul>
-            <li><a href="http://www.alchemyapi.com">AlchemyPI</a></li>
+            <li><a href="http://www.alchemyapi.com">AlchemyAPI</a></li>
             <li><a href="http://www.hnsearch.com/api">HNSearch API</a></li>
             <li><a href="http://appengine.google.com">Google AppEngine</a></li>
             <li><a href="http://www.tipfy.org">Tipfy</a></li>
