--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>HNMood - HackerNews comment sentimental analisys</title>
+    <title>HNMood - HackerNews comment sentimental analysis</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -17,7 +17,7 @@
 
 <body>
     <div class="container">
-        <h1>HackerNews comment sentimental analisys</h1>
+        <h1>HackerNews comment sentimental analysis</h1>
 
         <h2>About</h2>
         
@@ -35,7 +35,7 @@
         <p><img src="/static/img/screenshot.png" width="712" height="697"></p>
         
         <h2>Current status</h2>
-        <p>There is currently a 1000 daily call limit for the AlchemyAPI and the current database doesn't hold all the HN comments, only some recent analisys are available at the moment</p>
+        <p>There is currently a 1000 daily call limit for the AlchemyAPI and the current database doesn't hold all the HN comments, only some recent analysis are available at the moment</p>
         
         <h2>Powered by</h2>
         <ul>
