- html/css updates

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -34,17 +34,14 @@
         <h2>Screenshot</h2>
         <p><img src="/static/img/screenshot.png" width="712" height="697"></p>
         
-        <h2>Current status</h2>
-        <p>There is currently a 1000 daily call limit for the AlchemyAPI and the current database doesn't hold all the HN comments, only some recent analysis are available at the moment</p>
-        
-        <h2>Powered by</h2>
-        <ul>
-            <li><a href="http://www.dojotoolkit.org">Dojo Toolkit</a></li>
-            <li><a href="http://www.alchemyapi.com">AlchemyAPI</a></li>
+        <h2>Runs on</h2>
+        <ul class="runs_on">
+            <li><a href="http://www.dojotoolkit.org"><img src="http://dojofoundation.org/images/projects/dojoToolkitLogo.png" width="300" height="135" alt="Dojo Toolkit"> </a></li>
+            <li><a href="http://www.alchemyapi.com"><img src="http://www.alchemyapi.com/images/alchemyAPI.jpg" width="259" height="57" alt="Powered by AlchemyAPI"></a></li>
+            <li><a href="http://appengine.google.com"><img src="http://code.google.com/intl/pt-PT/appengine/images/appengine-silver-120x30.gif" width="120" height="30" alt="Powered by Google AppEngine (Python SDK)"></a></li>
             <li><a href="http://www.hnsearch.com/api">HNSearch API</a></li>
-            <li><a href="http://appengine.google.com">Google AppEngine</a></li>
             <li><a href="http://www.tipfy.org">Tipfy</a></li>
-            <li><a href="https://github.com/zemanel/HNMood">source code</a></li>            
+            <li>Source code is available on <a href="https://github.com/zemanel/HNMood">https://github.com/zemanel/HNMood</a></li>            
             
         </ul>
         
